# 3D-Renderer

./: .gitignore  CMakeLists.txt
res/shaders/: basic.shader
src/: application.cpp
